--- a/.gitignore
+++ b/.gitignore
@@ -1,53 +1,24 @@
-# Ignore node_modules directory
-node_modules/
-
-# Ignore logs
-logs/
+# Logs
+logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Ignore environment variables
-.env
+node_modules
+dist
+dist-ssr
+*.local
 
-# Ignore production build outputs
-dist/
-build/
-
-# Ignore coverage reports
-coverage/
-
-# Ignore dependency directories
-jspm_packages/
-
-# Ignore temporary files
-*.tmp
-*.temp
-
-# Ignore editor-specific files
-.vscode/
-.idea/
-*.swp
-
-# Ignore OS-specific files
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-Thumbs.db
-
-# Ignore npm package-lock files
-package-lock.json
-yarn.lock
-
-# Ignore miscellaneous files
-*.bak
-*.orig
-
-# Ignore compiled files
-*.out
-*.o
-*.class
-*.dll
-*.exe
-
-# Ignore text files
-*.txt
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
